src/index.css
@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap');
/* Color Theme Swatches in Hex */
.preliminary-bi-palette-neutrals-1-hex-black { color: #000000; }
.preliminary-bi-palette-neutrals-2-hex-beige-grey { color: #A69F95; }
.preliminary-bi-palette-neutrals-3-hex-light-grey{ color: #7A7A7A; }
.preliminary-bi-palette-neutrals-4-hex-white{ color: #FFFFFF; }
.preliminary-bi-palette-neutrals-5-hex-dark-grey{ color: #606B73; }

/* Color Theme Swatches in Hex */
.The-Future-is-Neutral™-3D-Art-for-Renault-1-hex { color: #0D0C0D; }
.The-Future-is-Neutral™-3D-Art-for-Renault-2-hex { color: #8C8B8C; }
.The-Future-is-Neutral™-3D-Art-for-Renault-3-hex { color: #595859; }
.The-Future-is-Neutral™-3D-Art-for-Renault-4-hex { color: #262626; }
.The-Future-is-Neutral™-3D-Art-for-Renault-5-hex { color: #D9D9D9; }

:root {
  --color-black: #0D0C0D;
  --color-lightest-grey: #8C8B8C;
  --color-light-grey: #595859;
  --color-white: #D9D9D9;
  --color-dark-grey: #262626;

  font-family: 'Cabin', system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: var(--color-white);
  background-color: var(--color-black);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.app {
  display: flex;
  width: 100vw;
  height: 100vh; 
}
.sidebar {
  width: 25vw;
  box-sizing: border-box;
  background-color: var(--color-dark-grey);
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}


.sidebar nav {
  width: 100%;
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.sidebar ul {
  width: 100%;
  padding: 5px 5px;
  margin: 5px;
  list-style: none;
}

.sidebar a {
  text-decoration: none;
  color: inherit;
  display: block;
  padding: 10px 0;
}

.sidebar a:hover {
  background-color: var(--color-light-grey);
  border-radius: 10px;
}

.sidebar a.active {
  background-color: var(--color-lightest-grey);
  border-radius: 10px;
}

.sidebar li {
  font-size: 1.2rem;
  padding: 10px 0;
  width: 100%;
  text-align: center;
  border-radius: 10px;
}
.sidebar h1 {
  font-size: 2.4rem;
  margin-top: 20px;
  margin-bottom: 5px;
}
.sidebar h2 {
  font-size: 1.4rem;
  margin-top: 0px;
}
.download-resume {
  display: inline-block;
  padding: 10px 0;
  width: 95%;
  margin: 15px;
  background-color: var(--color-white);
  color: var(--color-black);
  border: none;
  border-radius: 15px;
  cursor: pointer;
  text-decoration: none;
  font-weight: bold;
  font-family: 'Cabin', system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-size: 1.2rem;
}
.content {
  width: 75vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  background: radial-gradient(circle at 100%, #303030, #141414 50%, #303030 75%, #141414 75%);
}
.home {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}
.home h1 {
  font-size: 3rem;
  margin-bottom: 10px;
}

.colourGradient{
  background: linear-gradient(90deg, #b6263e 0%, #ff4665 25%, #FFC0CB 50%, #FFC0CB 75%, #FFC0CB 100%);
}

.bento-container {
  display: grid;
  grid: 1fr 1fr/ 1fr 1fr 1fr;
  gap: 30px;
  margin: 30px;
}
.bento-container .bento-box:nth-child(1) {
  grid-area: 1 / 1 / span 1 / span 1; 
}
.bento-container .bento-box:nth-child(2){
  grid-area:  1 / 2 / span 2 / span 2;
}
.bento-container .bento-box:nth-child(4) {
  grid-area:  3 / 1 / span 1 / span 2; 
}
.bento-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  padding: 20px;
  border: var(--color-light-grey) 1px solid;
  color: var(--color-white);
  background-color: #141414;
  text-align: center;
  /* Added transition for smooth effect */
  transition: transform 0.2s ease;
}
.bento-box:hover {
  /* Scale up the box on hover */
  transform: scale(1.05);
}
.bento-box h2 {
  font-size: 5rem;
  margin-bottom: 10px;
}
/* top | right | bottom | left */
.contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.long-bento-box {
  display: flex;
  width: 90%;
  margin: 5px;
  padding: 0px 30px 0px 30px;
  background-color: #141414;
  justify-content: space-between;
  align-items: center;
  border-radius: 10px;
  border: var(--color-light-grey) 1px solid;
}
.long-bento-box h2 {
  font-size: 2rem;
}
.long-bento-box p {
  font-size: 1.2rem;
}
.contact-form {
  display: flex;
  flex-direction: column;
  margin: 5px;
  width: 90%;
  padding: 30px;
  border-radius: 10px;
  background-color: #141414;
  border: var(--color-light-grey) 1px solid;
}
.contact-form button {
  width: 100%;
  margin-top: 15px;
  padding: 5px 0;
  background-color: var(--color-white);
  color: var(--color-black);
  border: none;
  border-radius: 2px;
  cursor: pointer;
  text-decoration: none;
  font-weight: bold;
  font-family: 'Cabin', system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-size: 1.2rem;
}
.contact-form textarea {
  height: 100px;
}
.contact-footer .footer-icon{
  width: 75px;
  height: 75px;
  margin: 15px;
  filter: brightness(0) invert(1);
}

.skills {
  display: flex;
  gap: 20px;
  margin-top: 20px;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
} 
.skills h1 {
  font-size: 5rem;
  margin-top: -10vh;
  color: var(--color-white);
}
.hex-container {
  margin-top: 45px;
  margin-inline-start: 40px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-content: center;
  filter: drop-shadow(10px 10px 200px #000000);
}
.skill-hex {
  width: 173px;
  height: 150px;
  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
  background-color: #262626;
  filter: drop-shadow(0 0 100px #ff0000);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: #fff;
  text-align: center;
  margin: 10px;
  transition: .13s ease;
  margin-left: -37px;
}
.skill-hex h2 {
  font-size: 1rem;
  transition: .1s ease;
}
.skill-icon {
  margin-block-start: 20px;
  width: 75px;
  height: 75px;
  transition: .1s ease;
}

.skill-hex:hover {
  background-color: var(--color-light-grey);
  border-radius: 10px;
  transform: scale(1.05);
}
.skill-hex:hover > .skill-icon {
  width: 80px;
  height: 80px;
}
.skill-hex:hover > .skill-hex h2 {
  font-size: 1.15rem;
}
.skill-hex:nth-child(even){
  translate: 0px 87px;
}


.project-slide {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  border: var(--color-light-grey) 1px solid;
  box-sizing: border-box;
  padding: 20px;
}
.project-slide img{
  width: 300px;
  height: 300px;
}

.projects-nav {
  display: flex;
  justify-content: center;
  flex-direction: row;
  align-items: center;
  padding: 30px 30px;
  margin: 30px 30px;
  
  border: #000000 1px solid;
}
.projects-nav button {
  font-family: 'Cabin', system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-size: 1.2rem;
  padding: 15px 30px;
  border-radius: 10px;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

